--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,21 +19,22 @@
     "quality": "pnpm run lint && pnpm run format:check && pnpm run type-check && pnpm run test:ci"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@tanstack/react-query": "^5.8.4",
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "@tanstack/react-query": "^5.8.4",
     "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "axios": "^1.6.2",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
+    "react-router-dom": "^6.20.1",
     "tailwind-merge": "^2.0.0",
-    "class-variance-authority": "^0.7.0",
     "tailwindcss-animate": "^1.0.7",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-label": "^2.0.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.0",
@@ -59,4 +60,4 @@
     "vite": "^5.0.0",
     "vitest": "^1.0.0"
   }
-} 
+}
